# src/routes/index.js
@@ -5,6 +5,8 @@ router.use("/api-docs", require("./swagger"));
 router.use("/auth", auth.router);
 router.use("/food", require("./food"));
 router.use("/contacts", require("./contacts"));
+router.use("/flowers", require("./flowers"));
+router.use("/jewels", require("./jewels"));
 
 router.get(auth.googleCallbackUrl, auth.googleAuthenticate, auth.googleCallback);
 
